# Coil-Geom

./: .gitignore  README.md  pyproject.toml
coil_geom/: __init__.py  coil_3phase.py  coil_color.py  coil_export.py  coil_gen.py  coil_geom.py  coil_print.py  coil_util.py
test/: c_c_dn.pptx  c_c_up.pptx  c_e_dn.pptx  c_e_up.pptx  c_ec_dn.pptx  c_ec_up.pptx  c_es_dn.pptx  c_es_up.pptx  test.py
