[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coil-geom"
version = "0.1.6"
description = "Parametric coil and inductor geometry generator"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Uisang Hwang" }]
dependencies = ["numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["coil_geom"]
license-files = []